<resources>
    <string name="app_name">DAR AL JEWAR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="home">HOME</string>
    <string name="events">EVENTS</string>
    <string name="services">BOOK SERVICES</string>
    <string name="services_list">SERVICES LIST</string>
    <string name="guest_reg">GUEST REGISTRATION</string>
    <string name="view_camera">VIEW CAMERA</string>
    <string name="projects">PROJECTS</string>
    <string name="my_profile">VIEW PROFILE</string>
    <string name="food">FOOD</string>
    <string name="taxi">TAXI</string>
    <string name="taxi1">Taxi</string>
    <string name="complaint">COMPLAINTS</string>
    <string name="emergency_contact">EMERGENCY CONTACT</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="my_bookings">MY BOOKINGS</string>
    <string name="navigation">NAVIGATION</string>
    <string name="logout">LOGOUT</string>

    <string name="notification">Notification</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="follow_us">Follow Us</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>

    <string name="header_formatter">%S %S</string>//

    <string name="formatter">Reg No: CMP%d</string>//
    <string name="formatter_number">%d %s</string>//
    <string name="number">%d</string>//
    <string name="am">AM</string>//
    <string name="pm">PM</string>//
    <string name="required">Required</string>//
    <string name="network_problem">Network Problem</string>//
    <string name="password_mismatch">Password Mismatch</string>//
    <string name="fil_all_fields">Fill All Fields</string>//
    <string name="select_time">Select Time</string>//
    <string name="total_area">Total Area of the project land</string>//
    <string name="choose_time">Choose Time</string>//
    <string name="please_upload_image">Please Upload image</string>//


    <string name="hello_world">hello world</string>

    <string name="halls">HALLS</string>
    <string name="tennis_court">TENNIS COURT</string>
    <string name="swimming_pool">SWIMMING POOL</string>
    <string name="date_and_time">Date and Time</string>
    <string name="number_of_guest">Number of Guests</string>
    <string name="comments">Comments</string>
    <string name="book">Book</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="wedding_reception">Wedding Reception</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_medium">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="lorem_ipsum_large">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="main_gate">Main Gate</string>
    <string name="children_play_area">Children Play Area</string>
    <string name="community_center">Community Center</string>
    <string name="assigned">Assigned</string>
    <string name="submitted">Submitted</string>
    <string name="in_progress">In Progress</string>
    <string name="your_complaint_status">Your Complaint Status</string>
    <string name="status">Status</string>
    <string name="description">Description</string>
    <string name="enjoy_our_events">Enjoy Our Events</string>
    <string name="more_images">Images</string>
    <string name="today_events">Todays Booking</string>
    <string name="guest_name">Guest Name</string>
    <string name="vehicle_no">Vehicle Reg.No</string>
    <string name="add">ADD</string>
    <string name="purpose">Purpose *</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="joining_date">Joining Date</string>
    <string name="email_id">Email Id</string>
    <string name="sample_mail">daj@gmail.com</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="occupation">Occupation</string>
    <string name="marital_status">Marital Status</string>
    <string name="nationality">Nationality</string>
    <string name="mobile_no">Mobile No</string>
    <string name="sample_mob">9446655666</string>
    <string name="interest_to_attend">Interest To Attend</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="choose_category">Choose Category</string>
    <string name="sample_address">Al Mahad Saudi Arabia</string>
    <string name="choose_purpose">Choose Purpose</string>
    <string name="title_activity_maps">Map</string>
    <string name="cooking_competition">COOKING COMPETITION</string>
    <string name="family_meeting_event">FAMILY MEETING EVENT</string>
    <string name="festival_events">FESTIVAL EVENTS</string>
    <string name="children_s_play_event">CHILDREN\'S PLAY EVENT</string>
    <string name="sports_event">SPORTS EVENT</string>
    <string name="wedding_event">WEDDING EVENT</string>
    <string name="upload_photo">Upload photo</string>

    <string name="completed">Completed</string>

    <string name="today1">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="weekend">ALL</string>

    <string name="family">Family</string>
    <string name="friend">Friend</string>
    <string name="maintenance">Maintenance</string>
    <string name="delivery">Delivery</string>

    <string name="electrical">ELECTRICAL</string>
    <string name="plumbing">PLUMBING</string>
    <string name="lift">LIFT</string>
    <string name="parking">PARKING</string>


    <string name="event_and_news">EVENT AND NEWS</string>
    <string name="event_details">EVENT DETAILS</string>
    <string name="event_news">EVENT NEWS</string>
    <string name="future_phase_info_details">FUTURE PHASE INFO DETAILS</string>
    <string name="future_phase_info_list">FUTURE PHASE INFO LIST</string>
    <string name="my_booking">MY BOOKINGS</string>
    <string name="my_complaint">MY COMPLAINTS</string>
    <string name="my_com">MY COMPLAINT</string>
    <string name="reg_complaint">Register Complaint</string>
    <string name="my_complaint_list">MY COMPLAINTS LIST</string>
    <string name="order_taxi">ORDER TAXI</string>
    <string name="order_food">ORDER FOOD</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="service_booking">BOOK SERVICE</string>
    <string name="surveillance">DAR Al JEWAR SURVEILLANCE</string>
    <string name="time">Time</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="villa_no_045">Villa No : %s</string>
    <string name="saudi_arabia">SAUDI ARABIA</string>
    <string name="dar_al_jewar_hall">Saudi Arabia</string>


    <string name="single">Single</string>
    <string name="married">Married</string>


    <string name="hall1">Hall 1</string>
    <string name="hall2">Hall 2</string>
    <string name="hall3">Hall 3</string>
    <string name="hall4">Hall 4</string>
    <string name="reg_no_727247878">Reg No: 727247878</string>
    <string name="restaurants">Restaurants</string>
    <string name="hospitals">Hospitals</string>
    <string name="petrol">Petrol</string>
    <string name="shopping">Shopping</string>
    <string name="map">MAP</string>
    <string name="success">Success</string>
    <string name="password_mailed">New password has been mailed to you, please login with it</string>

    <string name="please_try_again_later">please try again later</string>
    <string name="password_changed_successfully">password changed successfully</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="bulb_is_not_working">Bulb is not working</string>
    <string name="no">No</string>
    <string name="to">/</string>
    <string name="booking">Booking</string>
    <string name="interested">INTERESTED</string>
    <string name="fully_booked">FULLY BOOKED</string>
    <string name="time_formatter">%s %s</string>//
    <string name="name_formatter">%s %s %s</string>//
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="page_no_formatter">%d/%d</string>
    <string name="close">close</string>
    <string name="more">…More</string>
    <string name="less">…Less</string>
    <string name="divide">:</string>
    <string name="purpose_banner">Purpose</string>
    <string name="event">Event</string>
    <string name="venue">Venue</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="no_complaints_found">No Complaints Found</string>
    <string name="no_booking_found">No Booking Found</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="slots_filled">All The Slots Are Filled</string>
    <string name="description_formatter">%s \n</string>//
    <string name="arrived">Arrived</string>//
    <string name="date">Date</string>//


    <string name="capacity">Capacity</string>//
    <string name="complaint_no">Complaint No</string>//
    <string name="cmp">CMP%d</string>//
    <string name="technician">Assigned Technician</string>//


</resources>
