<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/icon_slection_english"
            android:title="@string/home" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/events" />
        <item
            android:id="@+id/services"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/services" />
        <item
            android:id="@+id/guest_registration"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/guest_reg" />
        <item
            android:id="@+id/view_camera"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/view_camera" />
        <item
            android:id="@+id/navigation"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation" />
        <item
            android:id="@+id/projects"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/projects" />
        <item
            android:id="@+id/my_bookings"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/my_bookings" />
        <item
            android:id="@+id/view_profile"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/food"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/food" />
        <item
            android:id="@+id/taxi"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/taxi"/>
        <item
            android:id="@+id/complaint"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/complaint" />
        <item
            android:id="@+id/emergency_contact"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/emergency_contact" />
        <item
            android:id="@+id/change_password"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/change_password" />

        <item
            android:id="@+id/test"
            android:title="" />
    </group>

    <!--<item android:title="Communicate">
        <menu>


        </menu>
    </item>-->


</menu>
