<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:src="@mipmap/bg"
        android:scaleType="centerCrop"/>

<!--    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="16dp"
        android:text="Button" />-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_purpose"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/family"
        style="@style/purposeList"
        android:layout_below="@+id/title"
        android:text="@string/family"
        />
    <TextView
        android:id="@+id/friend"
        style="@style/purposeList"
    android:layout_below="@+id/family"
        android:text="@string/friend"
        />
    <TextView
        android:id="@+id/maintenance"
        style="@style/purposeList"
    android:layout_below="@+id/friend"
        android:text="@string/maintenance"
        />

    <TextView
        android:id="@+id/taxi"
        style="@style/purposeList"
    android:layout_below="@+id/maintenance"
        android:text="@string/taxi1"
        />

    <TextView
        android:id="@+id/delivery"
        style="@style/purposeList"
    android:layout_below="@+id/taxi"
        android:text="@string/delivery"
        />

</RelativeLayout>