<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg" />

        <ImageView
            android:id="@+id/logo_en"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/sidebar_logo" />

        <com.pchmn.androidverify.InputValidator
            style="@style/Validator"
            app:required="true"
            app:requiredMessage="@string/required"
            android:layout_above="@+id/val">
        <EditText
            android:id="@+id/userName"
            style="@style/EditTextField"
            android:drawableStart="@drawable/user_small_green"
            android:hint="@string/user_name"
            android:text="jainy"
            android:textAlignment="viewStart"/>
        </com.pchmn.androidverify.InputValidator>


        <com.pchmn.androidverify.InputValidator
            android:id="@+id/val"
            style="@style/Validator"
            app:required="true"
            app:requiredMessage="@string/required"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
        <EditText
            android:id="@+id/password"
            style="@style/EditTextField"
            android:drawableStart="@drawable/password_small_green"
            android:hint="@string/password"
            android:text="12345"
            android:inputType="textPassword"
            android:textAlignment="viewStart"/>
        </com.pchmn.androidverify.InputValidator>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/val"
            android:layout_margin="20dp"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPassword"
            android:layout_margin="20dp"
            android:background="@drawable/curve_bg_green"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/followUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signIn"
            android:layout_centerHorizontal="true"
            android:text="@string/follow_us"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/followUs"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook"
                style="@style/socialMediaIcons"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/twitter"
                style="@style/socialMediaIcons"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:srcCompat="@drawable/twitter" />

            <ImageView
                android:id="@+id/instagram"
                style="@style/socialMediaIcons"
                app:srcCompat="@drawable/instagram" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/english"
                style="@style/languageSelect"
                android:text="@string/english" />

            <View
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/arabic"
                style="@style/languageSelect"
                android:text="@string/arabic" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>