<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg" />



        <EditText
            android:id="@+id/currentPassword"
            style="@style/EditTextField"
            android:layout_above="@+id/newPassword"
            android:drawableStart="@drawable/password_small_green"
            android:hint="@string/current_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/newPassword"
            style="@style/EditTextField"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/password_small_green"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>


        <EditText
            android:id="@+id/cnfrmPassword"
            style="@style/EditTextField"
            android:layout_below="@+id/newPassword"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/password_small_green"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />



        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cnfrmPassword"
            android:layout_margin="20dp"
            android:background="@drawable/curve_bg_green"
            android:text="@string/submit"
            android:textStyle="bold"
            android:elevation="5dp"
            android:textColor="@color/white" />


    </RelativeLayout>

</RelativeLayout>