<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bannerText"
            style="@style/headingMain"
            android:layout_marginBottom="10dp"
            android:text="@string/lorem_ipsum" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/total_area"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="67,455 Sqm"
            android:textColor="@color/greenText" />

        <TextView
            style="@style/heading1"
            android:layout_marginBottom="10dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lorem_ipsum_large"
            android:textColor="@color/black" />

        <include
            android:layout_width="match_parent"
            android:layout_height="200dp"
            layout="@layout/content_map"
            android:layout_marginBottom="10dp"/>

        <!--  <ImageView
              android:layout_width="match_parent"
              android:layout_height="200dp"
              android:scaleType="centerCrop"
              android:layout_marginBottom="10dp"
              android:src="@drawable/map"/>-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:elevation="5dp"
            />

    </LinearLayout>
</ScrollView>

