<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg" />

        <EditText
            android:id="@+id/userName"
            style="@style/EditTextField"
            android:layout_above="@+id/email"
            android:drawableStart="@drawable/user_small_green"
            android:hint="@string/user_name"/>

        <EditText
            android:id="@+id/email"
            style="@style/EditTextField"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_margin="20dp"
            android:background="@drawable/curve_bg_green"
            android:text="@string/submit"
            android:textStyle="bold"
            android:elevation="5dp"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>