<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/curve_small_bg_gray"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:elevation="3dp"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/banner1"
            style="@style/notificationTextStart"
            android:gravity="start"
            android:text="@string/event" />

        <TextView
            android:id="@+id/divide4"
            style="@style/notificationTextMiddle"
            android:layout_centerHorizontal="true"
            android:text="@string/divide" />

        <TextView
            android:id="@+id/text1"
            style="@style/notificationTextEnd"
            android:layout_toEndOf="@+id/divide4"
            android:maxLines="1"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/banner2"
            style="@style/notificationTextStart"
            android:gravity="start"
            android:text="@string/venue" />

        <TextView
            android:id="@+id/divide5"
            style="@style/notificationTextMiddle"
            android:layout_centerHorizontal="true"
            android:text="@string/divide" />

        <TextView
            android:id="@+id/text2"
            style="@style/notificationTextEnd"
            android:layout_toEndOf="@+id/divide5"
            android:maxLines="1"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/banner3"
            style="@style/notificationTextStart"
            android:gravity="start"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/divide6"
            style="@style/notificationTextMiddle"
            android:layout_centerHorizontal="true"
            android:text="@string/divide" />

        <TextView
            android:id="@+id/text3"
            style="@style/notificationTextEnd"
            android:layout_toEndOf="@+id/divide6"
            android:maxLines="1"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/banner4"
            style="@style/notificationTextStart"
            android:gravity="start"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/divide7"
            style="@style/notificationTextMiddle"
            android:layout_centerHorizontal="true"
            android:text="@string/divide" />

        <TextView
            android:id="@+id/text4"
            style="@style/notificationTextEnd"
            android:layout_toEndOf="@+id/divide7"
            android:maxLines="1"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/banner5"
            style="@style/notificationTextStart"
            android:gravity="start"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/divide8"
            style="@style/notificationTextMiddle"
            android:layout_centerHorizontal="true"
            android:text="@string/divide" />

        <TextView
            android:id="@+id/text5"
            style="@style/notificationTextEnd"
            android:layout_toEndOf="@+id/divide8"
            android:maxLines="1"/>
    </RelativeLayout>


</LinearLayout>


